# opengrab_can

./: .gitignore  README.md
firmware/: Makefile  STM32F103x8.ld  canaerospace.mk  flash_blackmagic.sh  flash_stm32sprog.sh  gdb_init.gdb  ld.ld
firmware/src/: canasctl.c  canasctl.h  config.c  config.h  console.c  console.h  flash_storage.c  flash_storage.h  magnet.c  magnet.h  main.c  main.cpp  watchdog.c  watchdog.h
firmware/src/sys/: assert.h  board.c  board.h  chconf.h  halconf.h  mcuconf.h  sys.c  sys.h
hardware/gerber/: opengrab_ctrl.drl  opengrab_ctrl.gbl  opengrab_ctrl.gbo  opengrab_ctrl.gbp  opengrab_ctrl.gtl  opengrab_ctrl.gto  opengrab_ctrl.gtp
test/: CMakeLists.txt  test.cpp
tools/: canas_control.py
